--- a/dw001_data/work05.html
+++ b/dw001_data/work05.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
+
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>ミスを見つけて修正しよう（HTMLタグ基礎）｜修正シリーズ</title>
-<style type="text/css">
-</style>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+  <title>ミスを見つけて修正しよう（HTMLタグ基礎）｜修正シリーズ</title>
+  <style type="text/css">
+
+  </style>
 </head>
+
 <body>
-<h1>スタイルシートとは</h1>
-<p>スタイルシート (英語: style sheet) とは、構造化文書などにおける表示形式を制御するしくみ。見栄えと構造を分離するという目的で提唱された。HTML、XML、SGMLといったマークアップ文書や、オフィスソフトにおいて広く使用されている。</p>
-<p>Web上で広く使われているHTML文書にスタイルシートを適用させる場合には、一般的にCSSが利用される。CSSが圧倒的に普及しているので、単にスタイルシートといえば<strong>CSS (Cascading Style Sheets)を指すことがある。</p>
+  <h1>スタイルシートとは</h1>
+  <p>スタイルシート (英語: style sheet) とは、構造化文書などにおける表示形式を制御するしくみ。見栄えと構造を分離するという目的で提唱された。HTML、XML、SGMLといったマークアップ文書や、オフィスソフトにおいて広く使用されている。</p>
+  <p>Web上で広く使われているHTML文書にスタイルシートを適用させる場合には、一般的にCSSが利用される。CSSが圧倒的に普及しているので、単にスタイルシートといえば<strong>CSS (Cascading Style Sheets)</strong>を指すことがある。</p>
 <hr />
 <p>Copyright 20XX Digital Hollywood Co.,Ltd. All Rights Reserved.</p>
 </body>
