<strong>タグが<p>の外にいました。 配置を変更しています。

--- a/dw001_data/work06.html
+++ b/dw001_data/work06.html
@@ -1,19 +1,23 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
+
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>ミスを見つけて修正しよう（HTMLタグ基礎）｜修正シリーズ</title>
-<style type="text/css">
-</style>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+  <title>ミスを見つけて修正しよう（HTMLタグ基礎）｜修正シリーズ</title>
+  <style type="text/css">
+
+  </style>
 </head>
+
 <body>
-<h1>JavaScript</h1>
-<p>JavaScriptという言葉は狭義にはMozillaが仕様を策定し実装しているスクリプト言語を指す。このスクリプト言語はEcmaインターナショナルでECMAScript(ECMA-262)として標準化されており、多くのWebブラウザー等はこの標準化されたECMAScriptを実装している。たとえば、マイクロソフトによる実装はJScriptと呼ぶ。</p>
-<p>一般的にJavaScriptという言葉が使われるときはこのようなさまざまなECMAScriptの実装も含んだ幅広い意味でつかわれるので、どちらの意味でJavaScriptという言葉が使われているかは文脈で判断する必要がある。</p>
-<p>ECMAScriptは仕様自体に独自の拡張を条件付きで認める記述があり、現在主要なブラウザが実装しているスクリプト言語はすべてECMAScriptに準拠していることになる。広義の意味でこれをJavaScriptと呼ぶ場合、主要なブラウザが実装しているスクリプト言語はマイクロソフトやGoogle,Appleの実装も含めてJavaScriptである。</p>
-<p>なお、Webブラウザーでよく実装されているAPIであるDOM(Document Object Model)はECMAScriptの仕様の一部ではないので、DOMの準拠の有無はECMAScriptの準拠の有無とは関係ない。</p>
-<p>また、<strong>プログラミング言語JavaはJavaScriptとは別物である。</p></strong>
-<hr />
-<p>Copyright 20XX Digital Hollywood Co.,Ltd. All Rights Reserved.</p>
+  <h1>JavaScript</h1>
+  <p>JavaScriptという言葉は狭義にはMozillaが仕様を策定し実装しているスクリプト言語を指す。このスクリプト言語はEcmaインターナショナルでECMAScript(ECMA-262)として標準化されており、多くのWebブラウザー等はこの標準化されたECMAScriptを実装している。たとえば、マイクロソフトによる実装はJScriptと呼ぶ。</p>
+  <p>一般的にJavaScriptという言葉が使われるときはこのようなさまざまなECMAScriptの実装も含んだ幅広い意味でつかわれるので、どちらの意味でJavaScriptという言葉が使われているかは文脈で判断する必要がある。</p>
+  <p>ECMAScriptは仕様自体に独自の拡張を条件付きで認める記述があり、現在主要なブラウザが実装しているスクリプト言語はすべてECMAScriptに準拠していることになる。広義の意味でこれをJavaScriptと呼ぶ場合、主要なブラウザが実装しているスクリプト言語はマイクロソフトやGoogle,Appleの実装も含めてJavaScriptである。</p>
+  <p>なお、Webブラウザーでよく実装されているAPIであるDOM(Document Object Model)はECMAScriptの仕様の一部ではないので、DOMの準拠の有無はECMAScriptの準拠の有無とは関係ない。</p>
+  <p>また、<strong>プログラミング言語JavaはJavaScriptとは別物である。</strong></p>
+    <hr />
+    <p>Copyright 20XX Digital Hollywood Co.,Ltd. All Rights Reserved.</p>
 </body>
+
 </html>
